force-app/main/default/objects/KeywordDetectionRule__mdt/KeywordDetectionRule__mdt.object-meta.xml
<CustomObject>
    <label>KeywordDetectionRule</label>
    <pluralLabel>KeywordDetectionRules</pluralLabel>
</CustomObject>