force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Destinataires__c.field-meta.xml
<CustomField>
    <fullName>Destinataires__c</fullName>
    <label>Destinataires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>