force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Expediteurs__c.field-meta.xml
<CustomField>
    <fullName>Expediteurs__c</fullName>
    <label>Expéditeurs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>