force-app/main/default/objects/KeywordDetectionRule__mdt/fields/File_d_attente__c.field-meta.xml
<CustomField>
    <fullName>File_d_attente__c</fullName>
    <label>File d&apos;attente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>