force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Operateur__c.field-meta.xml
<CustomField>
    <fullName>Operateur__c</fullName>
    <label>Opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commence par</fullName>
                <default>true</default>
                <label>Commence par</label>
            </value>
            <value>
                <fullName>Contient</fullName>
            </value>
            <value>
                <fullName>Mot entier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>