force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Ou__c.field-meta.xml
<CustomField>
    <fullName>Ou__c</fullName>
    <label>Où ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Objet</fullName>
                <default>true</default>
                <label>Objet</label>
            </value>
            <value>
                <fullName>Corps</fullName>
            </value>
            <value>
                <fullName>Objet/Corps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>