force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>Priorité</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>