force-app/main/default/objects/KeywordDetectionRule__mdt/fields/Sous_motif__c.field-meta.xml
<CustomField>
    <fullName>Sous_motif__c</fullName>
    <label>Sous-motif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>