force-app/main/default/objects/KeywordDetectionRule__mdt/listViews/Mots_cles_VWFS.listView-meta.xml
<ListView>
    <fullName>Mots_cles_VWFS</fullName>
    <columns>MasterLabel</columns>
    <columns>Expression__c</columns>
    <columns>Destinataires__c</columns>
    <columns>File_d_attente__c</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <columns>Operateur__c</columns>
    <columns>Ou__c</columns>
    <columns>Priorite__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mots clés VWFS</label>
    <language>fr</language>
    <sharedTo>
        <roleAndSubordinatesInternal>VWFS</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>