force-app/main/default/objects/KeywordDetectionRule__mdt/listViews/rc_fleet.listView-meta.xml
<ListView>
    <fullName>rc_fleet</fullName>
    <columns>Expression__c</columns>
    <columns>Destinataires__c</columns>
    <columns>File_d_attente__c</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_d_attente__c</field>
        <operation>startsWith</operation>
        <value>Fleet</value>
    </filters>
    <label>rc fleet</label>
    <language>en_US</language>
</ListView>