force-app/main/default/objects/KeywordDetectionRule__mdt/listViews/RECVT_Retail.listView-meta.xml
<ListView>
    <fullName>RECVT_Retail</fullName>
    <columns>Expression__c</columns>
    <columns>File_d_attente__c</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_d_attente__c</field>
        <operation>contains</operation>
        <value>Recouvrement - retail</value>
    </filters>
    <label>RECVT Retail</label>
    <language>en_US</language>
</ListView>