force-app/main/default/objects/KeywordDetectionRule__mdt/listViews/Retail_contract_mana.listView-meta.xml
<ListView>
    <fullName>Retail_contract_mana</fullName>
    <columns>Expression__c</columns>
    <columns>Expediteurs__c</columns>
    <columns>File_d_attente__c</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_d_attente__c</field>
        <operation>contains</operation>
        <value>Retail - Contract Management</value>
    </filters>
    <label>Retail contract mana</label>
    <language>en_US</language>
</ListView>