force-app/main/default/objects/KeywordDetectionRule__mdt/listViews/Retail_fin_de_contrat.listView-meta.xml
<ListView>
    <fullName>Retail_fin_de_contrat</fullName>
    <columns>Expression__c</columns>
    <columns>Destinataires__c</columns>
    <columns>File_d_attente__c</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>File_d_attente__c</field>
        <operation>contains</operation>
        <value>Retail - Fin de contrat</value>
    </filters>
    <label>Retail fin de contrat</label>
    <language>en_US</language>
</ListView>